#9 Updated NSArchive* + changed direction enum to OrderBySortOrder

--- a/docs/api-reference/CRMScript.NetServer.NSArchiveRestrictionGroup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveRestrictionGroup.yml
@@ -3,101 +3,24 @@ items:
 - uid: CRMScript.NetServer.NSArchiveRestrictionGroup
   commentId: T:CRMScript.NetServer.NSArchiveRestrictionGroup
   id: NSArchiveRestrictionGroup
-  so.intellisense: Void.NSArchiveRestrictionGroup
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSArchiveRestrictionGroup.#ctor
   - CRMScript.NetServer.NSArchiveRestrictionGroup.GetDescription()
   - CRMScript.NetServer.NSArchiveRestrictionGroup.GetName()
   - CRMScript.NetServer.NSArchiveRestrictionGroup.GetRank()
   - CRMScript.NetServer.NSArchiveRestrictionGroup.GetRestrictions()
-  - CRMScript.NetServer.NSArchiveRestrictionGroup.#ctor
   - CRMScript.NetServer.NSArchiveRestrictionGroup.SetDescription(String)
   - CRMScript.NetServer.NSArchiveRestrictionGroup.SetName(String)
   - CRMScript.NetServer.NSArchiveRestrictionGroup.SetRank(Integer)
-  - CRMScript.NetServer.NSArchiveRestrictionGroup.SetRestrictions()
+  - CRMScript.NetServer.NSArchiveRestrictionGroup.SetRestrictions(NSArchiveRestrictionInfo[])
   name: NSArchiveRestrictionGroup
   nameWithType: NSArchiveRestrictionGroup
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSArchiveRestrictionGroup.GetDescription()
-  commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.GetDescription()
-  id: 'GetDescription()'
-  so.intellisense: NSArchiveRestrictionGroup.GetDescription
-  langs:
-  - crmscript
-  name: 'GetDescription()'
-  nameWithType: NSArchiveRestrictionGroup.GetDescription()
-  fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.GetDescription()
-  type: Method
-  summary: "\nDescription of group<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSArchiveRestrictionGroup thing;\nString description = thing.GetDescription();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetDescription()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSArchiveRestrictionGroup thing;\nString description = thing.GetDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveRestrictionGroup.GetName()
-  commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.GetName()
-  id: 'GetName()'
-  so.intellisense: NSArchiveRestrictionGroup.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSArchiveRestrictionGroup.GetName()
-  fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.GetName()
-  type: Method
-  summary: "\nThe name of this criteria group<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSArchiveRestrictionGroup thing;\nString name = thing.GetName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSArchiveRestrictionGroup thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveRestrictionGroup.GetRank()
-  commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.GetRank()
-  id: 'GetRank()'
-  so.intellisense: NSArchiveRestrictionGroup.GetRank
-  langs:
-  - crmscript
-  name: 'GetRank()'
-  nameWithType: NSArchiveRestrictionGroup.GetRank()
-  fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.GetRank()
-  type: Method
-  summary: "\nRank order within this CriteriaModel<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSArchiveRestrictionGroup thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRank()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSArchiveRestrictionGroup thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveRestrictionGroup.GetRestrictions()
-  commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.GetRestrictions()
-  id: 'GetRestrictions()'
-  so.intellisense: NSArchiveRestrictionGroup.GetRestrictions
-  langs:
-  - crmscript
-  name: 'GetRestrictions()'
-  nameWithType: NSArchiveRestrictionGroup.GetRestrictions()
-  fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.GetRestrictions()
-  type: Method
-  summary: "\nArray of NSArchiveRestrictionInfo restriction specifications<p></p>\n<strong>Returns:</strong>NSArchiveRestrictionInfo[]<p></p>\n<pre><code>NSArchiveRestrictionGroup thing;\nNSArchiveRestrictionInfo[] restrictions = thing.GetRestrictions();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSArchiveRestrictionInfo[] GetRestrictions()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSArchiveRestrictionInfo[]
-  example: 
-  - "\n<pre><code>NSArchiveRestrictionGroup thing;\nNSArchiveRestrictionInfo[] restrictions = thing.GetRestrictions();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveRestrictionGroup.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.#ctor
   id: '#ctor'
@@ -113,6 +36,86 @@ items:
   syntax: 
     content: NSArchiveRestrictionGroup
   example: 
+- uid: CRMScript.NetServer.NSArchiveRestrictionGroup.GetDescription()
+  commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.GetDescription()
+  id: 'GetDescription()'
+  so.intellisense: NSArchiveRestrictionGroup.GetDescription
+  langs:
+  - crmscript
+  name: 'GetDescription()'
+  nameWithType: NSArchiveRestrictionGroup.GetDescription()
+  fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.GetDescription()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Description of group
+  example: 
+  - "\n<pre><code>NSArchiveRestrictionGroup thing;\nString description = thing.GetDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveRestrictionGroup.GetName()
+  commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.GetName()
+  id: 'GetName()'
+  so.intellisense: NSArchiveRestrictionGroup.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSArchiveRestrictionGroup.GetName()
+  fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of this criteria group
+  example: 
+  - "\n<pre><code>NSArchiveRestrictionGroup thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveRestrictionGroup.GetRank()
+  commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.GetRank()
+  id: 'GetRank()'
+  so.intellisense: NSArchiveRestrictionGroup.GetRank
+  langs:
+  - crmscript
+  name: 'GetRank()'
+  nameWithType: NSArchiveRestrictionGroup.GetRank()
+  fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.GetRank()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetRank()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Rank order within this CriteriaModel
+  example: 
+  - "\n<pre><code>NSArchiveRestrictionGroup thing;\nInteger rank = thing.GetRank();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveRestrictionGroup.GetRestrictions()
+  commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.GetRestrictions()
+  id: 'GetRestrictions()'
+  so.intellisense: NSArchiveRestrictionGroup.GetRestrictions
+  langs:
+  - crmscript
+  name: 'GetRestrictions()'
+  nameWithType: NSArchiveRestrictionGroup.GetRestrictions()
+  fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.GetRestrictions()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSArchiveRestrictionInfo[] GetRestrictions()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSArchiveRestrictionInfo[]
+      description: Array of NSArchiveRestrictionInfo restriction specifications
+  example: 
+  - "\n<pre><code>NSArchiveRestrictionGroup thing;\nNSArchiveRestrictionInfo[] restrictions = thing.GetRestrictions();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveRestrictionGroup.SetDescription(String)
   commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.SetDescription(String)
   id: 'SetDescription(String)'
@@ -123,14 +126,16 @@ items:
   nameWithType: NSArchiveRestrictionGroup.SetDescription(String)
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.SetDescription(String)
   type: Method
-  summary: "\nDescription of group\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetDescription(String description)
+    content: Void SetDescription(String description)
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description: 
+      description: Description of group
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveRestrictionGroup thing;\nString description;\nthing.SetDescription(description);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveRestrictionGroup.SetName(String)
@@ -143,14 +148,16 @@ items:
   nameWithType: NSArchiveRestrictionGroup.SetName(String)
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.SetName(String)
   type: Method
-  summary: "\nThe name of this criteria group\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetName(String name)
+    content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of this criteria group
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveRestrictionGroup thing;\nString name;\nthing.SetName(name);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveRestrictionGroup.SetRank(Integer)
@@ -163,31 +170,38 @@ items:
   nameWithType: NSArchiveRestrictionGroup.SetRank(Integer)
   fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.SetRank(Integer)
   type: Method
-  summary: "\nRank order within this CriteriaModel\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetRank(Integer rank)
+    content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: Rank order within this CriteriaModel
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveRestrictionGroup thing;\nInteger rank;\nthing.SetRank(rank);</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveRestrictionGroup.SetRestrictions()
-  commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.SetRestrictions()
-  id: 'SetRestrictions()'
+- uid: CRMScript.NetServer.NSArchiveRestrictionGroup.SetRestrictions(NSArchiveRestrictionInfo[])
+  commentId: M:CRMScript.NetServer.NSArchiveRestrictionGroup.SetRestrictions(NSArchiveRestrictionInfo[])
+  id: 'SetRestrictions(NSArchiveRestrictionInfo[])'
   so.intellisense: NSArchiveRestrictionGroup.SetRestrictions
   langs:
   - crmscript
-  name: 'SetRestrictions()'
-  nameWithType: NSArchiveRestrictionGroup.SetRestrictions()
-  fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.SetRestrictions()
+  name: 'SetRestrictions(NSArchiveRestrictionInfo[])'
+  nameWithType: NSArchiveRestrictionGroup.SetRestrictions(NSArchiveRestrictionInfo[])
+  fullName: CRMScript.NetServer.NSArchiveRestrictionGroup.SetRestrictions(NSArchiveRestrictionInfo[])
   type: Method
-  summary: "\nArray of NSArchiveRestrictionInfo restriction specifications\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetRestrictions(NSArchiveRestrictionInfo[] restrictions)
+    content: Void SetRestrictions(NSArchiveRestrictionInfo[] restrictions)
     parameters:
+    - id: restrictions
+      type: CRMScript.NetServer.NSArchiveRestrictionInfo[]
+      description: Array of NSArchiveRestrictionInfo restriction specifications
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveRestrictionGroup thing;\nNSArchiveRestrictionInfo[] restrictions;\nthing.SetRestrictions(restrictions);</code></pre>\n"
 references:
@@ -229,3 +243,9 @@ references:
   name: NSArchiveRestrictionInfo
   nameWithType: NSArchiveRestrictionInfo
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
