--- a/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
@@ -374,7 +374,7 @@ items:
   fullName: CRMScript.NetServer.NSTaskListItem.SetDirection(Integer)
   type: Method
   summary: "\n1 = incoming, 2 = outgoing, see EAppntDirection\n"
-  remarks: "\n<p>See enum direction.</p>\n"
+  remarks: ""
   syntax: 
     content: SetDirection(Integer direction)
     parameters:
