--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -43,7 +43,7 @@ items:
   - CRMScript.NetServer.description
   - CRMScript.NetServer.designtype
   - CRMScript.NetServer.destination
-  - CRMScript.NetServer.direction
+  - CRMScript.NetServer.OrderBySortType
   - CRMScript.NetServer.displayType
   - CRMScript.NetServer.domain
   - CRMScript.NetServer.durationUnit
@@ -97,7 +97,6 @@ items:
   - CRMScript.NetServer.NSArchiveColumnData
   - CRMScript.NetServer.NSArchiveColumnInfo
   - CRMScript.NetServer.NSArchiveConfiguration
-  - CRMScript.NetServer.NSArchiveList
   - CRMScript.NetServer.NSArchiveListItem
   - CRMScript.NetServer.NSArchiveListResult
   - CRMScript.NetServer.NSArchiveOrderByInfo
@@ -844,12 +843,6 @@ references:
   name: NSArchiveConfiguration
   nameWithType: NSArchiveConfiguration
   fullName: CRMScript.NetServer.NSArchiveConfiguration
-- uid: CRMScript.NetServer.NSArchiveList
-  commentId: T:CRMScript.NetServer.NSArchiveList
-  isExternal: true
-  name: NSArchiveList
-  nameWithType: NSArchiveList
-  fullName: CRMScript.NetServer.NSArchiveList
 - uid: CRMScript.NetServer.NSArchiveListItem
   commentId: T:CRMScript.NetServer.NSArchiveListItem
   isExternal: true
@@ -868,12 +861,12 @@ references:
   name: NSArchiveOrderByInfo
   nameWithType: NSArchiveOrderByInfo
   fullName: CRMScript.NetServer.NSArchiveOrderByInfo
-- uid: CRMScript.NetServer.direction
-  commentId: T:CRMScript.NetServer.direction
+- uid: CRMScript.NetServer.OrderBySortType
+  commentId: T:CRMScript.NetServer.OrderBySortType
   isExternal: true
-  name: direction
-  nameWithType: direction
-  fullName: CRMScript.NetServer.direction
+  name: OrderBySortType
+  nameWithType: OrderBySortType
+  fullName: CRMScript.NetServer.OrderBySortType
 - uid: CRMScript.NetServer.NSArchiveRestrictionGroup
   commentId: T:CRMScript.NetServer.NSArchiveRestrictionGroup
   isExternal: true
