--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -178,8 +178,6 @@ items:
     href: CRMScript.NetServer.NSArchiveColumnInfo.yml
   - name: NSArchiveConfiguration
     href: CRMScript.NetServer.NSArchiveConfiguration.yml
-  - name: NSArchiveList
-    href: CRMScript.NetServer.NSArchiveList.yml
   - name: NSArchiveListItem
     href: CRMScript.NetServer.NSArchiveListItem.yml
   - name: NSArchiveListResult
@@ -1216,8 +1214,6 @@ items:
       href: CRMScript.NetServer.designtype.yml
     - name: Enum destination
       href: CRMScript.NetServer.destination.yml
-    - name: Enum direction
-      href: CRMScript.NetServer.direction.yml
     - name: Enum displayType
       href: CRMScript.NetServer.displayType.yml
     - name: Enum domain
@@ -1290,6 +1286,8 @@ items:
       href: CRMScript.NetServer.NSWidgetRequiredFields.yml
     - name: Enum operation
       href: CRMScript.NetServer.operation.yml
+    - name: OrderBySortType
+      href: CRMScript.NetServer.OrderBySortType.yml
     - name: Enum orientation
       href: CRMScript.NetServer.orientation.yml
     - name: Enum origin
