--- a/docs/api-reference/CRMScript.NetServer.NSArchiveColumnData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveColumnData.yml
@@ -3,14 +3,13 @@ items:
 - uid: CRMScript.NetServer.NSArchiveColumnData
   commentId: T:CRMScript.NetServer.NSArchiveColumnData
   id: NSArchiveColumnData
-  so.intellisense: Void.NSArchiveColumnData
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSArchiveColumnData.#ctor
   - CRMScript.NetServer.NSArchiveColumnData.GetDisplayValue()
   - CRMScript.NetServer.NSArchiveColumnData.GetLinkHint()
   - CRMScript.NetServer.NSArchiveColumnData.GetTooltipHint()
-  - CRMScript.NetServer.NSArchiveColumnData.#ctor
   - CRMScript.NetServer.NSArchiveColumnData.SetDisplayValue(String)
   - CRMScript.NetServer.NSArchiveColumnData.SetLinkHint(String)
   - CRMScript.NetServer.NSArchiveColumnData.SetTooltipHint(String)
@@ -20,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSArchiveColumnData.GetDisplayValue()
-  commentId: M:CRMScript.NetServer.NSArchiveColumnData.GetDisplayValue()
-  id: 'GetDisplayValue()'
-  so.intellisense: NSArchiveColumnData.GetDisplayValue
-  langs:
-  - crmscript
-  name: 'GetDisplayValue()'
-  nameWithType: NSArchiveColumnData.GetDisplayValue()
-  fullName: CRMScript.NetServer.NSArchiveColumnData.GetDisplayValue()
-  type: Method
-  summary: "\nThe visible display value for an archive cell. It is always a string, and other data types are converted to string according to the invariant culture. &quot;[I:123]&quot; or &quot;[D:2014-09-13]&quot;. Further conversion to the local culture is the responsibility of the client.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSArchiveColumnData thing;\nString displayValue = thing.GetDisplayValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayValue()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSArchiveColumnData thing;\nString displayValue = thing.GetDisplayValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveColumnData.GetLinkHint()
-  commentId: M:CRMScript.NetServer.NSArchiveColumnData.GetLinkHint()
-  id: 'GetLinkHint()'
-  so.intellisense: NSArchiveColumnData.GetLinkHint
-  langs:
-  - crmscript
-  name: 'GetLinkHint()'
-  nameWithType: NSArchiveColumnData.GetLinkHint()
-  fullName: CRMScript.NetServer.NSArchiveColumnData.GetLinkHint()
-  type: Method
-  summary: "\nThe link hint consists of information to construct an actual link; additional information (such as a view context) must be provided by the client, who is also responsible for building the link. The content of the link will generally be one or more ids, such as contact_id=123.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSArchiveColumnData thing;\nString linkHint = thing.GetLinkHint();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetLinkHint()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSArchiveColumnData thing;\nString linkHint = thing.GetLinkHint();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveColumnData.GetTooltipHint()
-  commentId: M:CRMScript.NetServer.NSArchiveColumnData.GetTooltipHint()
-  id: 'GetTooltipHint()'
-  so.intellisense: NSArchiveColumnData.GetTooltipHint
-  langs:
-  - crmscript
-  name: 'GetTooltipHint()'
-  nameWithType: NSArchiveColumnData.GetTooltipHint()
-  fullName: CRMScript.NetServer.NSArchiveColumnData.GetTooltipHint()
-  type: Method
-  summary: "\nThe tooltip hint is either a text to be shown (after resource tag substitution), or a tooltip key to be given to the tooltip provider system in order to asynchronoously retrieve the actual tooltip.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSArchiveColumnData thing;\nString tooltipHint = thing.GetTooltipHint();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltipHint()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSArchiveColumnData thing;\nString tooltipHint = thing.GetTooltipHint();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveColumnData.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveColumnData.#ctor
   id: '#ctor'
@@ -92,6 +34,66 @@ items:
   syntax: 
     content: NSArchiveColumnData
   example: 
+- uid: CRMScript.NetServer.NSArchiveColumnData.GetDisplayValue()
+  commentId: M:CRMScript.NetServer.NSArchiveColumnData.GetDisplayValue()
+  id: 'GetDisplayValue()'
+  so.intellisense: NSArchiveColumnData.GetDisplayValue
+  langs:
+  - crmscript
+  name: 'GetDisplayValue()'
+  nameWithType: NSArchiveColumnData.GetDisplayValue()
+  fullName: CRMScript.NetServer.NSArchiveColumnData.GetDisplayValue()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDisplayValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The visible display value for an archive cell. It is always a string, and other data types are converted to string according to the invariant culture. &quot;[I:123]&quot; or &quot;[D:2014-09-13]&quot;. Further conversion to the local culture is the responsibility of the client.
+  example: 
+  - "\n<pre><code>NSArchiveColumnData thing;\nString displayValue = thing.GetDisplayValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveColumnData.GetLinkHint()
+  commentId: M:CRMScript.NetServer.NSArchiveColumnData.GetLinkHint()
+  id: 'GetLinkHint()'
+  so.intellisense: NSArchiveColumnData.GetLinkHint
+  langs:
+  - crmscript
+  name: 'GetLinkHint()'
+  nameWithType: NSArchiveColumnData.GetLinkHint()
+  fullName: CRMScript.NetServer.NSArchiveColumnData.GetLinkHint()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetLinkHint()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The link hint consists of information to construct an actual link; additional information (such as a view context) must be provided by the client, who is also responsible for building the link. The content of the link will generally be one or more ids, such as contact_id=123.
+  example: 
+  - "\n<pre><code>NSArchiveColumnData thing;\nString linkHint = thing.GetLinkHint();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveColumnData.GetTooltipHint()
+  commentId: M:CRMScript.NetServer.NSArchiveColumnData.GetTooltipHint()
+  id: 'GetTooltipHint()'
+  so.intellisense: NSArchiveColumnData.GetTooltipHint
+  langs:
+  - crmscript
+  name: 'GetTooltipHint()'
+  nameWithType: NSArchiveColumnData.GetTooltipHint()
+  fullName: CRMScript.NetServer.NSArchiveColumnData.GetTooltipHint()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetTooltipHint()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The tooltip hint is either a text to be shown (after resource tag substitution), or a tooltip key to be given to the tooltip provider system in order to asynchronously retrieve the actual tooltip.
+  example: 
+  - "\n<pre><code>NSArchiveColumnData thing;\nString tooltipHint = thing.GetTooltipHint();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveColumnData.SetDisplayValue(String)
   commentId: M:CRMScript.NetServer.NSArchiveColumnData.SetDisplayValue(String)
   id: 'SetDisplayValue(String)'
@@ -102,14 +104,16 @@ items:
   nameWithType: NSArchiveColumnData.SetDisplayValue(String)
   fullName: CRMScript.NetServer.NSArchiveColumnData.SetDisplayValue(String)
   type: Method
-  summary: "\nThe visible display value for an archive cell. It is always a string, and other data types are converted to string according to the invariant culture. &quot;[I:123]&quot; or &quot;[D:2014-09-13]&quot;. Further conversion to the local culture is the responsibility of the client.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetDisplayValue(String displayValue)
+    content: Void SetDisplayValue(String displayValue)
     parameters:
     - id: displayValue
       type: CRMScript.Global.String
-      description: 
+      description: The visible display value for an archive cell. It is always a string, and other data types are converted to string according to the invariant culture. &quot;[I:123]&quot; or &quot;[D:2014-09-13]&quot;. Further conversion to the local culture is the responsibility of the client.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveColumnData thing;\nString displayValue;\nthing.SetDisplayValue(displayValue);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveColumnData.SetLinkHint(String)
@@ -122,14 +126,16 @@ items:
   nameWithType: NSArchiveColumnData.SetLinkHint(String)
   fullName: CRMScript.NetServer.NSArchiveColumnData.SetLinkHint(String)
   type: Method
-  summary: "\nThe link hint consists of information to construct an actual link; additional information (such as a view context) must be provided by the client, who is also responsible for building the link. The content of the link will generally be one or more ids, such as contact_id=123.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetLinkHint(String linkHint)
+    content: Void SetLinkHint(String linkHint)
     parameters:
     - id: linkHint
       type: CRMScript.Global.String
-      description: 
+      description: The link hint consists of information to construct an actual link; additional information (such as a view context) must be provided by the client, who is also responsible for building the link. The content of the link will generally be one or more ids, such as contact_id=123.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveColumnData thing;\nString linkHint;\nthing.SetLinkHint(linkHint);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveColumnData.SetTooltipHint(String)
@@ -142,14 +148,16 @@ items:
   nameWithType: NSArchiveColumnData.SetTooltipHint(String)
   fullName: CRMScript.NetServer.NSArchiveColumnData.SetTooltipHint(String)
   type: Method
-  summary: "\nThe tooltip hint is either a text to be shown (after resource tag substitution), or a tooltip key to be given to the tooltip provider system in order to asynchronoously retrieve the actual tooltip.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetTooltipHint(String tooltipHint)
+    content: Void SetTooltipHint(String tooltipHint)
     parameters:
     - id: tooltipHint
       type: CRMScript.Global.String
-      description: 
+      description: The tooltip hint is either a text to be shown (after resource tag substitution), or a tooltip key to be given to the tooltip provider system in order to asynchronously retrieve the actual tooltip.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveColumnData thing;\nString tooltipHint;\nthing.SetTooltipHint(tooltipHint);</code></pre>\n"
 references:
@@ -165,3 +173,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
