--- a/docs/api-reference/CRMScript.NetServer.NSArchiveConfiguration.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveConfiguration.yml
@@ -3,18 +3,17 @@ items:
 - uid: CRMScript.NetServer.NSArchiveConfiguration
   commentId: T:CRMScript.NetServer.NSArchiveConfiguration
   id: NSArchiveConfiguration
-  so.intellisense: Void.NSArchiveConfiguration
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSArchiveConfiguration.#ctor
   - CRMScript.NetServer.NSArchiveConfiguration.GetArchiveColumnInfo()
   - CRMScript.NetServer.NSArchiveConfiguration.GetArchiveEntityInfo()
   - CRMScript.NetServer.NSArchiveConfiguration.GetArchiveOrderByInfo()
   - CRMScript.NetServer.NSArchiveConfiguration.GetOwnerKeys()
-  - CRMScript.NetServer.NSArchiveConfiguration.#ctor
-  - CRMScript.NetServer.NSArchiveConfiguration.SetArchiveColumnInfo()
-  - CRMScript.NetServer.NSArchiveConfiguration.SetArchiveEntityInfo()
-  - CRMScript.NetServer.NSArchiveConfiguration.SetArchiveOrderByInfo()
+  - CRMScript.NetServer.NSArchiveConfiguration.SetArchiveColumnInfo(NSArchiveColumnInfo[])
+  - CRMScript.NetServer.NSArchiveConfiguration.SetArchiveEntityInfo(NSSelectableMDOListItem[])
+  - CRMScript.NetServer.NSArchiveConfiguration.SetArchiveOrderByInfo(NSArchiveOrderByInfo[])
   - CRMScript.NetServer.NSArchiveConfiguration.SetOwnerKeys(String)
   name: NSArchiveConfiguration
   nameWithType: NSArchiveConfiguration
@@ -22,82 +21,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveColumnInfo()
-  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.GetArchiveColumnInfo()
-  id: 'GetArchiveColumnInfo()'
-  so.intellisense: NSArchiveConfiguration.GetArchiveColumnInfo
-  langs:
-  - crmscript
-  name: 'GetArchiveColumnInfo()'
-  nameWithType: NSArchiveConfiguration.GetArchiveColumnInfo()
-  fullName: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveColumnInfo()
-  type: Method
-  summary: "\n<strong>Returns:</strong>NSArchiveColumnInfo[]<p></p>\n<pre><code>NSArchiveConfiguration thing;\nNSArchiveColumnInfo[] archiveColumnInfo = thing.GetArchiveColumnInfo();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSArchiveColumnInfo[] GetArchiveColumnInfo()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSArchiveColumnInfo[]
-  example: 
-  - "\n<pre><code>NSArchiveConfiguration thing;\nNSArchiveColumnInfo[] archiveColumnInfo = thing.GetArchiveColumnInfo();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveEntityInfo()
-  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.GetArchiveEntityInfo()
-  id: 'GetArchiveEntityInfo()'
-  so.intellisense: NSArchiveConfiguration.GetArchiveEntityInfo
-  langs:
-  - crmscript
-  name: 'GetArchiveEntityInfo()'
-  nameWithType: NSArchiveConfiguration.GetArchiveEntityInfo()
-  fullName: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveEntityInfo()
-  type: Method
-  summary: "\n<strong>Returns:</strong>NSSelectableMDOListItem[]<p></p>\n<pre><code>NSArchiveConfiguration thing;\nNSSelectableMDOListItem[] archiveEntityInfo = thing.GetArchiveEntityInfo();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSSelectableMDOListItem[] GetArchiveEntityInfo()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSSelectableMDOListItem[]
-  example: 
-  - "\n<pre><code>NSArchiveConfiguration thing;\nNSSelectableMDOListItem[] archiveEntityInfo = thing.GetArchiveEntityInfo();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveOrderByInfo()
-  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.GetArchiveOrderByInfo()
-  id: 'GetArchiveOrderByInfo()'
-  so.intellisense: NSArchiveConfiguration.GetArchiveOrderByInfo
-  langs:
-  - crmscript
-  name: 'GetArchiveOrderByInfo()'
-  nameWithType: NSArchiveConfiguration.GetArchiveOrderByInfo()
-  fullName: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveOrderByInfo()
-  type: Method
-  summary: "\n<strong>Returns:</strong>NSArchiveOrderByInfo[]<p></p>\n<pre><code>NSArchiveConfiguration thing;\nNSArchiveOrderByInfo[] archiveOrderByInfo = thing.GetArchiveOrderByInfo();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSArchiveOrderByInfo[] GetArchiveOrderByInfo()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSArchiveOrderByInfo[]
-  example: 
-  - "\n<pre><code>NSArchiveConfiguration thing;\nNSArchiveOrderByInfo[] archiveOrderByInfo = thing.GetArchiveOrderByInfo();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveConfiguration.GetOwnerKeys()
-  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.GetOwnerKeys()
-  id: 'GetOwnerKeys()'
-  so.intellisense: NSArchiveConfiguration.GetOwnerKeys
-  langs:
-  - crmscript
-  name: 'GetOwnerKeys()'
-  nameWithType: NSArchiveConfiguration.GetOwnerKeys()
-  fullName: CRMScript.NetServer.NSArchiveConfiguration.GetOwnerKeys()
-  type: Method
-  summary: "\nThe actual ownership information for the configuration that was retrieved<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSArchiveConfiguration thing;\nString ownerKeys = thing.GetOwnerKeys();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetOwnerKeys()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSArchiveConfiguration thing;\nString ownerKeys = thing.GetOwnerKeys();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveConfiguration.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveConfiguration.#ctor
   id: '#ctor'
@@ -113,55 +36,150 @@ items:
   syntax: 
     content: NSArchiveConfiguration
   example: 
-- uid: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveColumnInfo()
-  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.SetArchiveColumnInfo()
-  id: 'SetArchiveColumnInfo()'
+- uid: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveColumnInfo()
+  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.GetArchiveColumnInfo()
+  id: 'GetArchiveColumnInfo()'
+  so.intellisense: NSArchiveConfiguration.GetArchiveColumnInfo
+  langs:
+  - crmscript
+  name: 'GetArchiveColumnInfo()'
+  nameWithType: NSArchiveConfiguration.GetArchiveColumnInfo()
+  fullName: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveColumnInfo()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSArchiveColumnInfo[] GetArchiveColumnInfo()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSArchiveColumnInfo[]
+      description:
+  example: 
+  - "\n<pre><code>NSArchiveConfiguration thing;\nNSArchiveColumnInfo[] archiveColumnInfo = thing.GetArchiveColumnInfo();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveEntityInfo()
+  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.GetArchiveEntityInfo()
+  id: 'GetArchiveEntityInfo()'
+  so.intellisense: NSArchiveConfiguration.GetArchiveEntityInfo
+  langs:
+  - crmscript
+  name: 'GetArchiveEntityInfo()'
+  nameWithType: NSArchiveConfiguration.GetArchiveEntityInfo()
+  fullName: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveEntityInfo()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSSelectableMDOListItem[] GetArchiveEntityInfo()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSSelectableMDOListItem[]
+      description:
+  example: 
+  - "\n<pre><code>NSArchiveConfiguration thing;\nNSSelectableMDOListItem[] archiveEntityInfo = thing.GetArchiveEntityInfo();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveOrderByInfo()
+  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.GetArchiveOrderByInfo()
+  id: 'GetArchiveOrderByInfo()'
+  so.intellisense: NSArchiveConfiguration.GetArchiveOrderByInfo
+  langs:
+  - crmscript
+  name: 'GetArchiveOrderByInfo()'
+  nameWithType: NSArchiveConfiguration.GetArchiveOrderByInfo()
+  fullName: CRMScript.NetServer.NSArchiveConfiguration.GetArchiveOrderByInfo()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSArchiveOrderByInfo[] GetArchiveOrderByInfo()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSArchiveOrderByInfo[]
+      description:
+  example: 
+  - "\n<pre><code>NSArchiveConfiguration thing;\nNSArchiveOrderByInfo[] archiveOrderByInfo = thing.GetArchiveOrderByInfo();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveConfiguration.GetOwnerKeys()
+  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.GetOwnerKeys()
+  id: 'GetOwnerKeys()'
+  so.intellisense: NSArchiveConfiguration.GetOwnerKeys
+  langs:
+  - crmscript
+  name: 'GetOwnerKeys()'
+  nameWithType: NSArchiveConfiguration.GetOwnerKeys()
+  fullName: CRMScript.NetServer.NSArchiveConfiguration.GetOwnerKeys()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetOwnerKeys()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The actual ownership information for the configuration that was retrieved
+  example: 
+  - "\n<pre><code>NSArchiveConfiguration thing;\nString ownerKeys = thing.GetOwnerKeys();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveColumnInfo(NSArchiveColumnInfo[])
+  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.SetArchiveColumnInfo(NSArchiveColumnInfo[])
+  id: 'SetArchiveColumnInfo(NSArchiveColumnInfo[])'
   so.intellisense: NSArchiveConfiguration.SetArchiveColumnInfo
   langs:
   - crmscript
-  name: 'SetArchiveColumnInfo()'
-  nameWithType: NSArchiveConfiguration.SetArchiveColumnInfo()
-  fullName: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveColumnInfo()
+  name: 'SetArchiveColumnInfo(NSArchiveColumnInfo[])'
+  nameWithType: NSArchiveConfiguration.SetArchiveColumnInfo(NSArchiveColumnInfo[])
+  fullName: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveColumnInfo(NSArchiveColumnInfo[])
   type: Method
   summary: 
   remarks: 
   syntax: 
-    content: SetArchiveColumnInfo(NSArchiveColumnInfo[] archiveColumnInfo)
+    content: Void SetArchiveColumnInfo(NSArchiveColumnInfo[] archiveColumnInfo)
     parameters:
+    - id: archiveColumnInfo
+      type: CRMScript.NetServer.NSArchiveColumnInfo[]
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveConfiguration thing;\nNSArchiveColumnInfo[] archiveColumnInfo;\nthing.SetArchiveColumnInfo(archiveColumnInfo);</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveEntityInfo()
-  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.SetArchiveEntityInfo()
-  id: 'SetArchiveEntityInfo()'
+- uid: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveEntityInfo(NSSelectableMDOListItem[])
+  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.SetArchiveEntityInfo(NSSelectableMDOListItem[])
+  id: 'SetArchiveEntityInfo(NSSelectableMDOListItem[])'
   so.intellisense: NSArchiveConfiguration.SetArchiveEntityInfo
   langs:
   - crmscript
-  name: 'SetArchiveEntityInfo()'
-  nameWithType: NSArchiveConfiguration.SetArchiveEntityInfo()
-  fullName: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveEntityInfo()
+  name: 'SetArchiveEntityInfo(NSSelectableMDOListItem[])'
+  nameWithType: NSArchiveConfiguration.SetArchiveEntityInfo(NSSelectableMDOListItem[])
+  fullName: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveEntityInfo(NSSelectableMDOListItem[])
   type: Method
   summary: 
   remarks: 
   syntax: 
-    content: SetArchiveEntityInfo(NSSelectableMDOListItem[] archiveEntityInfo)
+    content: Void SetArchiveEntityInfo(NSSelectableMDOListItem[] archiveEntityInfo)
     parameters:
+    - id: archiveEntityInfo
+      type: CRMScript.NetServer.NSSelectableMDOListItem[]
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveConfiguration thing;\nNSSelectableMDOListItem[] archiveEntityInfo;\nthing.SetArchiveEntityInfo(archiveEntityInfo);</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveOrderByInfo()
-  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.SetArchiveOrderByInfo()
-  id: 'SetArchiveOrderByInfo()'
+- uid: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveOrderByInfo(NSArchiveOrderByInfo[])
+  commentId: M:CRMScript.NetServer.NSArchiveConfiguration.SetArchiveOrderByInfo(NSArchiveOrderByInfo[])
+  id: 'SetArchiveOrderByInfo(NSArchiveOrderByInfo[])'
   so.intellisense: NSArchiveConfiguration.SetArchiveOrderByInfo
   langs:
   - crmscript
-  name: 'SetArchiveOrderByInfo()'
-  nameWithType: NSArchiveConfiguration.SetArchiveOrderByInfo()
-  fullName: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveOrderByInfo()
+  name: 'SetArchiveOrderByInfo(NSArchiveOrderByInfo[])'
+  nameWithType: NSArchiveConfiguration.SetArchiveOrderByInfo(NSArchiveOrderByInfo[])
+  fullName: CRMScript.NetServer.NSArchiveConfiguration.SetArchiveOrderByInfo(NSArchiveOrderByInfo[])
   type: Method
   summary: 
   remarks: 
   syntax: 
-    content: SetArchiveOrderByInfo(NSArchiveOrderByInfo[] archiveOrderByInfo)
+    content: Void SetArchiveOrderByInfo(NSArchiveOrderByInfo[] archiveOrderByInfo)
     parameters:
+    - id: archiveColumnInfo
+      type: CRMScript.NetServer.NSArchiveColumnInfo[]
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveConfiguration thing;\nNSArchiveOrderByInfo[] archiveOrderByInfo;\nthing.SetArchiveOrderByInfo(archiveOrderByInfo);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveConfiguration.SetOwnerKeys(String)
@@ -174,14 +192,16 @@ items:
   nameWithType: NSArchiveConfiguration.SetOwnerKeys(String)
   fullName: CRMScript.NetServer.NSArchiveConfiguration.SetOwnerKeys(String)
   type: Method
-  summary: "\nThe actual ownership information for the configuration that was retrieved\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetOwnerKeys(String ownerKeys)
+    content: Void SetOwnerKeys(String ownerKeys)
     parameters:
     - id: ownerKeys
       type: CRMScript.Global.String
-      description: 
+      description: The actual ownership information for the configuration that was retrieved
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveConfiguration thing;\nString ownerKeys;\nthing.SetOwnerKeys(ownerKeys);</code></pre>\n"
 references:
@@ -257,3 +277,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
