--- a/docs/api-reference/CRMScript.NetServer.NSArchiveListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveListItem.yml
@@ -3,17 +3,16 @@ items:
 - uid: CRMScript.NetServer.NSArchiveListItem
   commentId: T:CRMScript.NetServer.NSArchiveListItem
   id: NSArchiveListItem
-  so.intellisense: Void.NSArchiveListItem
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSArchiveListItem.#ctor
   - CRMScript.NetServer.NSArchiveListItem.GetColumnData()
   - CRMScript.NetServer.NSArchiveListItem.GetEntityName()
   - CRMScript.NetServer.NSArchiveListItem.GetLinkHint()
   - CRMScript.NetServer.NSArchiveListItem.GetPrimaryKey()
   - CRMScript.NetServer.NSArchiveListItem.GetStyleHint()
-  - CRMScript.NetServer.NSArchiveListItem.#ctor
-  - CRMScript.NetServer.NSArchiveListItem.SetColumnData()
+  - CRMScript.NetServer.NSArchiveListItem.SetColumnData(Map)
   - CRMScript.NetServer.NSArchiveListItem.SetEntityName(String)
   - CRMScript.NetServer.NSArchiveListItem.SetLinkHint(String)
   - CRMScript.NetServer.NSArchiveListItem.SetPrimaryKey(Integer)
@@ -24,101 +23,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSArchiveListItem.GetColumnData()
-  commentId: M:CRMScript.NetServer.NSArchiveListItem.GetColumnData()
-  id: 'GetColumnData()'
-  so.intellisense: NSArchiveListItem.GetColumnData
-  langs:
-  - crmscript
-  name: 'GetColumnData()'
-  nameWithType: NSArchiveListItem.GetColumnData()
-  fullName: CRMScript.NetServer.NSArchiveListItem.GetColumnData()
-  type: Method
-  summary: "\nDictionary of column name* column data items. Each column data item contains a display value, a tooltip hint, a link hint, and an orderby value.<para/>The display value is encoded by the CultureDataFormatter and can be decoded / localized by that class; all other values are optional.<para/>Tooltip hints can be passed to the TooltipProvider (Tooltip service) to be translated into an actual tootip.<p></p>\n<strong>Returns:</strong>NSColumnDataDictionary<p></p>\n<pre><code>NSArchiveListItem thing;\nNSColumnDataDictionary columnData = thing.GetColumnData();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSColumnDataDictionary GetColumnData()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSColumnDataDictionary
-  example: 
-  - "\n<pre><code>NSArchiveListItem thing;\nNSColumnDataDictionary columnData = thing.GetColumnData();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveListItem.GetEntityName()
-  commentId: M:CRMScript.NetServer.NSArchiveListItem.GetEntityName()
-  id: 'GetEntityName()'
-  so.intellisense: NSArchiveListItem.GetEntityName
-  langs:
-  - crmscript
-  name: 'GetEntityName()'
-  nameWithType: NSArchiveListItem.GetEntityName()
-  fullName: CRMScript.NetServer.NSArchiveListItem.GetEntityName()
-  type: Method
-  summary: "\nThe entity name of the NSArchiveListItem. An ArchiveList may contain rows from different entities.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSArchiveListItem thing;\nString entityName = thing.GetEntityName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetEntityName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSArchiveListItem thing;\nString entityName = thing.GetEntityName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveListItem.GetLinkHint()
-  commentId: M:CRMScript.NetServer.NSArchiveListItem.GetLinkHint()
-  id: 'GetLinkHint()'
-  so.intellisense: NSArchiveListItem.GetLinkHint
-  langs:
-  - crmscript
-  name: 'GetLinkHint()'
-  nameWithType: NSArchiveListItem.GetLinkHint()
-  fullName: CRMScript.NetServer.NSArchiveListItem.GetLinkHint()
-  type: Method
-  summary: "\nLink hint for the row, indicating things like navigation links that can be presented as clickable hyperlinks<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSArchiveListItem thing;\nString linkHint = thing.GetLinkHint();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetLinkHint()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSArchiveListItem thing;\nString linkHint = thing.GetLinkHint();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveListItem.GetPrimaryKey()
-  commentId: M:CRMScript.NetServer.NSArchiveListItem.GetPrimaryKey()
-  id: 'GetPrimaryKey()'
-  so.intellisense: NSArchiveListItem.GetPrimaryKey
-  langs:
-  - crmscript
-  name: 'GetPrimaryKey()'
-  nameWithType: NSArchiveListItem.GetPrimaryKey()
-  fullName: CRMScript.NetServer.NSArchiveListItem.GetPrimaryKey()
-  type: Method
-  summary: "\nThe  primary key for the row<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSArchiveListItem thing;\nInteger primaryKey = thing.GetPrimaryKey();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetPrimaryKey()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSArchiveListItem thing;\nInteger primaryKey = thing.GetPrimaryKey();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveListItem.GetStyleHint()
-  commentId: M:CRMScript.NetServer.NSArchiveListItem.GetStyleHint()
-  id: 'GetStyleHint()'
-  so.intellisense: NSArchiveListItem.GetStyleHint
-  langs:
-  - crmscript
-  name: 'GetStyleHint()'
-  nameWithType: NSArchiveListItem.GetStyleHint()
-  fullName: CRMScript.NetServer.NSArchiveListItem.GetStyleHint()
-  type: Method
-  summary: "\nStyle hint for the row, for instance 'retired' for associates or 'private' for appointments. Presentation layers can interpret the style hints as they see fit.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSArchiveListItem thing;\nString styleHint = thing.GetStyleHint();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetStyleHint()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSArchiveListItem thing;\nString styleHint = thing.GetStyleHint();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveListItem.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveListItem.#ctor
   id: '#ctor'
@@ -134,23 +38,128 @@ items:
   syntax: 
     content: NSArchiveListItem
   example: 
-- uid: CRMScript.NetServer.NSArchiveListItem.SetColumnData()
-  commentId: M:CRMScript.NetServer.NSArchiveListItem.SetColumnData()
-  id: 'SetColumnData()'
+- uid: CRMScript.NetServer.NSArchiveListItem.GetColumnData()
+  commentId: M:CRMScript.NetServer.NSArchiveListItem.GetColumnData()
+  id: 'GetColumnData()'
+  so.intellisense: NSArchiveListItem.GetColumnData
+  langs:
+  - crmscript
+  name: 'GetColumnData()'
+  nameWithType: NSArchiveListItem.GetColumnData()
+  fullName: CRMScript.NetServer.NSArchiveListItem.GetColumnData()
+  type: Method
+  summary: ""
+  remarks: "\nEach column data item contains a display value, a tooltip hint, a link hint, and an orderby value. The display value is encoded by the CultureDataFormatter and can be decoded / localized by that class; all other values are optional.<p></p>\nTooltip hints can be passed to the TooltipProvider (Tooltip service) to be translated into an actual tooltip.\n"
+  syntax: 
+    content: Map GetColumnData()
+    parameters: []
+    return:
+      type: CRMScript.Global.Map
+      description: Map of column name - column data items.
+  example: 
+  - "\n<pre><code>NSArchiveListItem thing;\nMap columnData = thing.GetColumnData();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveListItem.GetEntityName()
+  commentId: M:CRMScript.NetServer.NSArchiveListItem.GetEntityName()
+  id: 'GetEntityName()'
+  so.intellisense: NSArchiveListItem.GetEntityName
+  langs:
+  - crmscript
+  name: 'GetEntityName()'
+  nameWithType: NSArchiveListItem.GetEntityName()
+  fullName: CRMScript.NetServer.NSArchiveListItem.GetEntityName()
+  type: Method
+  summary: ""
+  remarks: "\nAn ArchiveList may contain rows from different entities.\n"
+  syntax: 
+    content: String GetEntityName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The entity name of the NSArchiveListItem.
+  example: 
+  - "\n<pre><code>NSArchiveListItem thing;\nString entityName = thing.GetEntityName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveListItem.GetLinkHint()
+  commentId: M:CRMScript.NetServer.NSArchiveListItem.GetLinkHint()
+  id: 'GetLinkHint()'
+  so.intellisense: NSArchiveListItem.GetLinkHint
+  langs:
+  - crmscript
+  name: 'GetLinkHint()'
+  nameWithType: NSArchiveListItem.GetLinkHint()
+  fullName: CRMScript.NetServer.NSArchiveListItem.GetLinkHint()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetLinkHint()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Link hint for the row, indicating things like navigation links that can be presented as clickable hyperlinks
+  example: 
+  - "\n<pre><code>NSArchiveListItem thing;\nString linkHint = thing.GetLinkHint();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveListItem.GetPrimaryKey()
+  commentId: M:CRMScript.NetServer.NSArchiveListItem.GetPrimaryKey()
+  id: 'GetPrimaryKey()'
+  so.intellisense: NSArchiveListItem.GetPrimaryKey
+  langs:
+  - crmscript
+  name: 'GetPrimaryKey()'
+  nameWithType: NSArchiveListItem.GetPrimaryKey()
+  fullName: CRMScript.NetServer.NSArchiveListItem.GetPrimaryKey()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetPrimaryKey()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The primary key for the row
+  example: 
+  - "\n<pre><code>NSArchiveListItem thing;\nInteger primaryKey = thing.GetPrimaryKey();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveListItem.GetStyleHint()
+  commentId: M:CRMScript.NetServer.NSArchiveListItem.GetStyleHint()
+  id: 'GetStyleHint()'
+  so.intellisense: NSArchiveListItem.GetStyleHint
+  langs:
+  - crmscript
+  name: 'GetStyleHint()'
+  nameWithType: NSArchiveListItem.GetStyleHint()
+  fullName: CRMScript.NetServer.NSArchiveListItem.GetStyleHint()
+  type: Method
+  summary: ""
+  remarks: "\nPresentation layers can interpret the style hints as they see fit.\n"
+  syntax: 
+    content: String GetStyleHint()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Style hint for the row, for instance 'retired' for associates or 'private' for appointments.
+  example: 
+  - "\n<pre><code>NSArchiveListItem thing;\nString styleHint = thing.GetStyleHint();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveListItem.SetColumnData(Map)
+  commentId: M:CRMScript.NetServer.NSArchiveListItem.SetColumnData(Map)
+  id: 'SetColumnData(Map)'
   so.intellisense: NSArchiveListItem.SetColumnData
   langs:
   - crmscript
-  name: 'SetColumnData()'
-  nameWithType: NSArchiveListItem.SetColumnData()
-  fullName: CRMScript.NetServer.NSArchiveListItem.SetColumnData()
+  name: 'SetColumnData(Map)'
+  nameWithType: NSArchiveListItem.SetColumnData(Map)
+  fullName: CRMScript.NetServer.NSArchiveListItem.SetColumnData(Map)
   type: Method
-  summary: "\nCRMScript method in the NSArchiveListItem class that sets columnDataDictionary of column name* column data items. Each column data item contains a display value, a tooltip hint, a link hint, and an ORDERBY value.<p></p>\nThe display value is encoded by the<strong>CultureDataFormatter</strong>and can be decoded or localized by that class. All other values are optional.<p></p>\nTooltip hints can be passed to the<strong>TooltipProvider</strong>(Tooltip service) to be translated into an actual too tip.<p></p>\n<code>SetColumnData(NSColumnDataDictionary columnData)</code>\n"
+  summary: "\nEach column data item contains a display value, a tooltip hint, a link hint, and an ORDERBY value.<p></p>\nThe display value is encoded by the<strong>CultureDataFormatter</strong>and can be decoded or localized by that class. All other values are optional.<p></p>\nTooltip hints can be passed to the<strong>TooltipProvider</strong>(Tooltip service) to be translated into an actual tooltip.\n"
   remarks: 
   syntax: 
-    content: SetColumnData()
+    content: Void SetColumnData(Map columnData)
     parameters:
+    - id: columnData
+      type: CRMScript.Global.Map
+      description: column name - column data items
+    return:
+      type: CRMScript.Global.Void
   example: 
-  - "\n<pre><code>NSArchiveListItem thing;\nNSColumnDataDictionary columnData;\nthing.SetColumnData(columnData);</code></pre>\n"
+  - "\n<pre><code>NSArchiveListItem thing;\nMap columnData;\nthing.SetColumnData(columnData);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveListItem.SetEntityName(String)
   commentId: M:CRMScript.NetServer.NSArchiveListItem.SetEntityName(String)
   id: 'SetEntityName(String)'
@@ -161,14 +170,16 @@ items:
   nameWithType: NSArchiveListItem.SetEntityName(String)
   fullName: CRMScript.NetServer.NSArchiveListItem.SetEntityName(String)
   type: Method
-  summary: "\nThe entity name of the NSArchiveListItem. An ArchiveList may contain rows from different entities.\n"
-  remarks: 
+  summary: ""
+  remarks: "\nAn ArchiveList may contain rows from different entities.\n"
   syntax: 
-    content: SetEntityName(String entityName)
+    content: Void SetEntityName(String entityName)
     parameters:
     - id: entityName
       type: CRMScript.Global.String
-      description: 
+      description: The entity name of the NSArchiveListItem.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveListItem thing;\nString entityName;\nthing.SetEntityName(entityName);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveListItem.SetLinkHint(String)
@@ -181,14 +192,16 @@ items:
   nameWithType: NSArchiveListItem.SetLinkHint(String)
   fullName: CRMScript.NetServer.NSArchiveListItem.SetLinkHint(String)
   type: Method
-  summary: "\nLink hint for the row, indicating things like navigation links that can be presented as clickable hyperlinks\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetLinkHint(String linkHint)
+    content: Void SetLinkHint(String linkHint)
     parameters:
     - id: linkHint
       type: CRMScript.Global.String
-      description: 
+      description: Link hint for the row, indicating things like navigation links that can be presented as clickable hyperlinks
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveListItem thing;\nString linkHint;\nthing.SetLinkHint(linkHint);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveListItem.SetPrimaryKey(Integer)
@@ -201,14 +214,16 @@ items:
   nameWithType: NSArchiveListItem.SetPrimaryKey(Integer)
   fullName: CRMScript.NetServer.NSArchiveListItem.SetPrimaryKey(Integer)
   type: Method
-  summary: "\nThe  primary key for the row\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetPrimaryKey(Integer primaryKey)
+    content: Void SetPrimaryKey(Integer primaryKey)
     parameters:
     - id: primaryKey
       type: CRMScript.Global.Integer
-      description: 
+      description: The primary key for the row
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveListItem thing;\nInteger primaryKey;\nthing.SetPrimaryKey(primaryKey);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveListItem.SetStyleHint(String)
@@ -221,14 +236,16 @@ items:
   nameWithType: NSArchiveListItem.SetStyleHint(String)
   fullName: CRMScript.NetServer.NSArchiveListItem.SetStyleHint(String)
   type: Method
-  summary: "\nStyle hint for the row, for instance 'retired' for associates or 'private' for appointments. Presentation layers can interpret the style hints as they see fit.\n"
-  remarks: 
+  summary: ""
+  remarks: "\nPresentation layers can interpret the style hints as they see fit.\n"
   syntax: 
-    content: SetStyleHint(String styleHint)
+    content: Void SetStyleHint(String styleHint)
     parameters:
     - id: styleHint
       type: CRMScript.Global.String
-      description: 
+      description: Style hint for the row, for instance 'retired' for associates or 'private' for appointments.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveListItem thing;\nString styleHint;\nthing.SetStyleHint(styleHint);</code></pre>\n"
 references:
@@ -238,12 +255,12 @@ references:
   name: NSArchiveListItem
   nameWithType: NSArchiveListItem
   fullName: CRMScript.NetServer.NSArchiveListItem
-- uid: CRMScript.NetServer.NSColumnDataDictionary
-  commentId: T:CRMScript.NetServer.NSColumnDataDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: NSColumnDataDictionary
-  nameWithType: NSColumnDataDictionary
-  fullName: CRMScript.NetServer.NSColumnDataDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   isExternal: true
@@ -256,3 +273,9 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
