--- a/docs/api-reference/CRMScript.NetServer.NSArchiveListResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveListResult.yml
@@ -3,59 +3,20 @@ items:
 - uid: CRMScript.NetServer.NSArchiveListResult
   commentId: T:CRMScript.NetServer.NSArchiveListResult
   id: NSArchiveListResult
-  so.intellisense: Void.NSArchiveListResult
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSArchiveListResult.#ctor
   - CRMScript.NetServer.NSArchiveListResult.GetRowCount()
   - CRMScript.NetServer.NSArchiveListResult.GetRows()
-  - CRMScript.NetServer.NSArchiveListResult.#ctor
   - CRMScript.NetServer.NSArchiveListResult.SetRowCount(Integer)
-  - CRMScript.NetServer.NSArchiveListResult.SetRows()
+  - CRMScript.NetServer.NSArchiveListResult.SetRows(NSArchiveListItem[])
   name: NSArchiveListResult
   nameWithType: NSArchiveListResult
   fullName: CRMScript.NetServer.NSArchiveListResult
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSArchiveListResult.GetRowCount()
-  commentId: M:CRMScript.NetServer.NSArchiveListResult.GetRowCount()
-  id: 'GetRowCount()'
-  so.intellisense: NSArchiveListResult.GetRowCount
-  langs:
-  - crmscript
-  name: 'GetRowCount()'
-  nameWithType: NSArchiveListResult.GetRowCount()
-  fullName: CRMScript.NetServer.NSArchiveListResult.GetRowCount()
-  type: Method
-  summary: "\nCount of rows, independent of paging. If you order up page 1 with page size 50, the row count may still be 279, that being the number of rows that would have been returned in a  paging-off situation<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSArchiveListResult thing;\nInteger rowCount = thing.GetRowCount();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRowCount()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSArchiveListResult thing;\nInteger rowCount = thing.GetRowCount();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveListResult.GetRows()
-  commentId: M:CRMScript.NetServer.NSArchiveListResult.GetRows()
-  id: 'GetRows()'
-  so.intellisense: NSArchiveListResult.GetRows
-  langs:
-  - crmscript
-  name: 'GetRows()'
-  nameWithType: NSArchiveListResult.GetRows()
-  fullName: CRMScript.NetServer.NSArchiveListResult.GetRows()
-  type: Method
-  summary: "\nThe actual rows, according to the paging info, of the result. See RowCount for a paging-independent count estimate<p></p>\n<strong>Returns:</strong>NSArchiveListItem[]<p></p>\n<pre><code>NSArchiveListResult thing;\nNSArchiveListItem[] rows = thing.GetRows();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSArchiveListItem[] GetRows()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSArchiveListItem[]
-  example: 
-  - "\n<pre><code>NSArchiveListResult thing;\nNSArchiveListItem[] rows = thing.GetRows();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveListResult.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveListResult.#ctor
   id: '#ctor'
@@ -71,6 +32,46 @@ items:
   syntax: 
     content: NSArchiveListResult
   example: 
+- uid: CRMScript.NetServer.NSArchiveListResult.GetRowCount()
+  commentId: M:CRMScript.NetServer.NSArchiveListResult.GetRowCount()
+  id: 'GetRowCount()'
+  so.intellisense: NSArchiveListResult.GetRowCount
+  langs:
+  - crmscript
+  name: 'GetRowCount()'
+  nameWithType: NSArchiveListResult.GetRowCount()
+  fullName: CRMScript.NetServer.NSArchiveListResult.GetRowCount()
+  type: Method
+  summary: ""
+  remarks: "\nIf you order up page 1 with page size 50, the row count may still be 279, that being the number of rows that would have been returned in a paging-off situation.\n"
+  syntax: 
+    content: Integer GetRowCount()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Count of rows, independent of paging.
+  example: 
+  - "\n<pre><code>NSArchiveListResult thing;\nInteger rowCount = thing.GetRowCount();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveListResult.GetRows()
+  commentId: M:CRMScript.NetServer.NSArchiveListResult.GetRows()
+  id: 'GetRows()'
+  so.intellisense: NSArchiveListResult.GetRows
+  langs:
+  - crmscript
+  name: 'GetRows()'
+  nameWithType: NSArchiveListResult.GetRows()
+  fullName: CRMScript.NetServer.NSArchiveListResult.GetRows()
+  type: Method
+  summary: ""
+  remarks: "\nSee RowCount for a paging-independent count estimate\n"
+  syntax: 
+    content: NSArchiveListItem[] GetRows()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSArchiveListItem[]
+      description: The actual rows, according to the paging info, of the result.
+  example: 
+  - "\n<pre><code>NSArchiveListResult thing;\nNSArchiveListItem[] rows = thing.GetRows();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveListResult.SetRowCount(Integer)
   commentId: M:CRMScript.NetServer.NSArchiveListResult.SetRowCount(Integer)
   id: 'SetRowCount(Integer)'
@@ -81,31 +82,38 @@ items:
   nameWithType: NSArchiveListResult.SetRowCount(Integer)
   fullName: CRMScript.NetServer.NSArchiveListResult.SetRowCount(Integer)
   type: Method
-  summary: "\nCount of rows, independent of paging. If you order up page 1 with page size 50, the row count may still be 279, that being the number of rows that would have been returned in a  paging-off situation\n"
-  remarks: 
+  summary: ""
+  remarks: "\nIf you order up page 1 with page size 50, the row count may still be 279, that being the number of rows that would have been returned in a  paging-off situation\n"
   syntax: 
-    content: SetRowCount(Integer rowCount)
+    content: Void SetRowCount(Integer rowCount)
     parameters:
     - id: rowCount
       type: CRMScript.Global.Integer
-      description: 
+      description: Count of rows, independent of paging.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveListResult thing;\nInteger rowCount;\nthing.SetRowCount(rowCount);</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveListResult.SetRows()
-  commentId: M:CRMScript.NetServer.NSArchiveListResult.SetRows()
-  id: 'SetRows()'
+- uid: CRMScript.NetServer.NSArchiveListResult.SetRows(NSArchiveListItem[])
+  commentId: M:CRMScript.NetServer.NSArchiveListResult.SetRows(NSArchiveListItem[])
+  id: 'SetRows(NSArchiveListItem[])'
   so.intellisense: NSArchiveListResult.SetRows
   langs:
   - crmscript
-  name: 'SetRows()'
-  nameWithType: NSArchiveListResult.SetRows()
-  fullName: CRMScript.NetServer.NSArchiveListResult.SetRows()
+  name: 'SetRows(NSArchiveListItem[])'
+  nameWithType: NSArchiveListResult.SetRows(NSArchiveListItem[])
+  fullName: CRMScript.NetServer.NSArchiveListResult.SetRows(NSArchiveListItem[])
   type: Method
-  summary: "\nThe actual rows, according to the paging info, of the result. See RowCount for a paging-independent count estimate\n"
-  remarks: 
+  summary: ""
+  remarks: "\nSee RowCount for a paging-independent count estimate\n"
   syntax: 
-    content: SetRows(NSArchiveListItem[] rows)
-    parameters:
+    content: Void SetRows(NSArchiveListItem[] rows)
+    parameters: 
+    - id: rows
+      type: CRMScript.NetServer.NSArchiveListItem[]
+      description: The actual rows, according to the paging info, of the result.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveListResult thing;\nNSArchiveListItem[] rows;\nthing.SetRows(rows);</code></pre>\n"
 references:
@@ -141,3 +149,9 @@ references:
   name: NSArchiveListItem
   nameWithType: NSArchiveListItem
   fullName: CRMScript.NetServer.NSArchiveListItem
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
