--- a/docs/api-reference/CRMScript.NetServer.NSArchiveOrderByInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveOrderByInfo.yml
@@ -3,59 +3,20 @@ items:
 - uid: CRMScript.NetServer.NSArchiveOrderByInfo
   commentId: T:CRMScript.NetServer.NSArchiveOrderByInfo
   id: NSArchiveOrderByInfo
-  so.intellisense: Void.NSArchiveOrderByInfo
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSArchiveOrderByInfo.#ctor
   - CRMScript.NetServer.NSArchiveOrderByInfo.GetDirection()
   - CRMScript.NetServer.NSArchiveOrderByInfo.GetName()
-  - CRMScript.NetServer.NSArchiveOrderByInfo.#ctor
   - CRMScript.NetServer.NSArchiveOrderByInfo.SetDirection(Integer)
   - CRMScript.NetServer.NSArchiveOrderByInfo.SetName(String)
   name: NSArchiveOrderByInfo
   nameWithType: NSArchiveOrderByInfo
   fullName: CRMScript.NetServer.NSArchiveOrderByInfo
   type: Class
-  summary: 
+  summary: ""
   example: 
-- uid: CRMScript.NetServer.NSArchiveOrderByInfo.GetDirection()
-  commentId: M:CRMScript.NetServer.NSArchiveOrderByInfo.GetDirection()
-  id: 'GetDirection()'
-  so.intellisense: NSArchiveOrderByInfo.GetDirection
-  langs:
-  - crmscript
-  name: 'GetDirection()'
-  nameWithType: NSArchiveOrderByInfo.GetDirection()
-  fullName: CRMScript.NetServer.NSArchiveOrderByInfo.GetDirection()
-  type: Method
-  summary: "\nDirection to order.<p></p>\n<strong>Returns:</strong>Integer\n"
-  remarks: 
-  syntax: 
-    content: Integer GetDirection()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSArchiveOrderByInfo thing;\nInteger direction = thing.GetDirection();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveOrderByInfo.GetName()
-  commentId: M:CRMScript.NetServer.NSArchiveOrderByInfo.GetName()
-  id: 'GetName()'
-  so.intellisense: NSArchiveOrderByInfo.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSArchiveOrderByInfo.GetName()
-  fullName: CRMScript.NetServer.NSArchiveOrderByInfo.GetName()
-  type: Method
-  summary: "\nProgrammatic name of the column to order by, semantically the same as the NSArchiveColumnInfo.Name.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSArchiveOrderByInfo thing;\nString name = thing.GetName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSArchiveOrderByInfo thing;\nString name = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveOrderByInfo.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveOrderByInfo.#ctor
   id: '#ctor'
@@ -71,6 +32,46 @@ items:
   syntax: 
     content: NSArchiveOrderByInfo
   example: 
+- uid: CRMScript.NetServer.NSArchiveOrderByInfo.GetDirection()
+  commentId: M:CRMScript.NetServer.NSArchiveOrderByInfo.GetDirection()
+  id: 'GetDirection()'
+  so.intellisense: NSArchiveOrderByInfo.GetDirection
+  langs:
+  - crmscript
+  name: 'GetDirection()'
+  nameWithType: NSArchiveOrderByInfo.GetDirection()
+  fullName: CRMScript.NetServer.NSArchiveOrderByInfo.GetDirection()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetDirection()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Direction to order. See <xref href=\"CRMScript.NetServer.OrderBySortType\" data-throw-if-not-resolved=\"false\"></xref>
+  example: 
+  - "\n<pre><code>NSArchiveOrderByInfo thing;\nInteger direction = thing.GetDirection();</code></pre>\n"
+- uid: CRMScript.NetServer.NSArchiveOrderByInfo.GetName()
+  commentId: M:CRMScript.NetServer.NSArchiveOrderByInfo.GetName()
+  id: 'GetName()'
+  so.intellisense: NSArchiveOrderByInfo.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSArchiveOrderByInfo.GetName()
+  fullName: CRMScript.NetServer.NSArchiveOrderByInfo.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Programmatic name of the column to order by, semantically the same as the NSArchiveColumnInfo.Name.
+  example: 
+  - "\n<pre><code>NSArchiveOrderByInfo thing;\nString name = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveOrderByInfo.SetDirection(Integer)
   commentId: M:CRMScript.NetServer.NSArchiveOrderByInfo.SetDirection(Integer)
   id: 'SetDirection(Integer)'
@@ -81,14 +82,16 @@ items:
   nameWithType: NSArchiveOrderByInfo.SetDirection(Integer)
   fullName: CRMScript.NetServer.NSArchiveOrderByInfo.SetDirection(Integer)
   type: Method
-  summary: "\nDirection to order.\n"
-  remarks: "\n<p>See enum direction.</p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
-    content: SetDirection(Integer direction)
+    content: Void SetDirection(Integer direction)
     parameters:
     - id: direction
       type: CRMScript.Global.Integer
-      description: 
+      description: Direction to order. See <xref href=\"CRMScript.NetServer.OrderBySortType\" data-throw-if-not-resolved=\"false\"></xref>
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveOrderByInfo thing;\nInteger direction;\nthing.SetDirection(direction);</code></pre>\n"
 - uid: CRMScript.NetServer.NSArchiveOrderByInfo.SetName(String)
@@ -101,14 +104,16 @@ items:
   nameWithType: NSArchiveOrderByInfo.SetName(String)
   fullName: CRMScript.NetServer.NSArchiveOrderByInfo.SetName(String)
   type: Method
-  summary: "\nProgrammatic name of the column to order by, semantically the same as the NSArchiveColumnInfo.Name.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetName(String name)
+    content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Programmatic name of the column to order by, semantically the same as the NSArchiveColumnInfo.Name.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSArchiveOrderByInfo thing;\nString name;\nthing.SetName(name);</code></pre>\n"
 references:
@@ -130,3 +135,15 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.OrderBySortType
+  commentId: T:CRMScript.NetServer.OrderBySortType
+  isExternal: true
+  name: OrderBySortType
+  nameWithType: OrderBySortType
+  fullName: CRMScript.NetServer.OrderBySortType
