--- a/docs/api-reference/CRMScript.NetServer.NSModuleLicense.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSModuleLicense.yml
@@ -355,7 +355,7 @@ items:
   fullName: CRMScript.NetServer.NSModuleLicense.SetAllowedUserType(Integer)
   type: Method
   summary: "\nAllowed associate type for user licenses: internal(0), external(4).\n"
-  remarks: "\n<p>See enum associateType.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AssociateType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetAllowedUserType(Integer allowedUserType)
     parameters:
@@ -666,3 +666,9 @@ references:
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
+- uid: CRMScript.NetServer.AssociateType
+  commentId: T:CRMScript.NetServer.AssociateType
+  isExternal: true
+  name: AssociateType
+  nameWithType: AssociateType
+  fullName: CRMScript.NetServer.AssociateType
