--- a/docs/api-reference/CRMScript.NetServer.NSUser.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUser.yml
@@ -972,7 +972,7 @@ items:
   fullName: CRMScript.NetServer.NSUser.SetType(Integer)
   type: Method
   summary: "\nNSUser type: 1=InternalAssociate, 2=ResourceAssociate, 3=ExternalAssociate, 4=AnonymousAssociate, 5=SystemAssociate\n"
-  remarks: "\n<p>See enum associateType.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AssociateType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetType(Integer type)
     parameters:
@@ -1176,3 +1176,9 @@ references:
   name: NSUserGroup
   nameWithType: NSUserGroup
   fullName: CRMScript.NetServer.NSUserGroup
+- uid: CRMScript.NetServer.AssociateType
+  commentId: T:CRMScript.NetServer.AssociateType
+  isExternal: true
+  name: AssociateType
+  nameWithType: AssociateType
+  fullName: CRMScript.NetServer.AssociateType
