--- a/docs/api-reference/CRMScript.NetServer.NSUserInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserInfo.yml
@@ -225,7 +225,7 @@ items:
   nameWithType: NSUserInfo.GetUserGroupId()
   fullName: CRMScript.NetServer.NSUserInfo.GetUserGroupId()
   type: Method
-  summary: "\nPrimary group membership, see UserGroupLink for secondary memberships<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSUserInfo thing;\nInteger userGroupId = thing.GetUserGroupId();</code></pre>\n"
+  summary: "\nPrimary group membership, See the UserGroupLink database table reference for secondary memberships<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSUserInfo thing;\nInteger userGroupId = thing.GetUserGroupId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetUserGroupId()
@@ -534,7 +534,7 @@ items:
   nameWithType: NSUserInfo.SetUserGroupId(Integer)
   fullName: CRMScript.NetServer.NSUserInfo.SetUserGroupId(Integer)
   type: Method
-  summary: "\nPrimary group membership, see UserGroupLink for secondary memberships\n"
+  summary: "\nPrimary group membership, See the UserGroupLink database table reference for secondary memberships\n"
   remarks: 
   syntax: 
     content: SetUserGroupId(Integer userGroupId)
@@ -635,7 +635,7 @@ items:
   fullName: CRMScript.NetServer.NSUserInfo.SetUserType(Integer)
   type: Method
   summary: 
-  remarks: "\n<p>See enum associateType.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.AssociateType\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetUserType(Integer userType)
     parameters:
@@ -689,3 +689,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.NetServer.AssociateType
+  commentId: T:CRMScript.NetServer.AssociateType
+  isExternal: true
+  name: AssociateType
+  nameWithType: AssociateType
+  fullName: CRMScript.NetServer.AssociateType
