--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -20,7 +20,7 @@ items:
   - CRMScript.NetServer.AppointmentType
   - CRMScript.NetServer.archivedState
   - CRMScript.NetServer.AssignmentStatus
-  - CRMScript.NetServer.associateType
+  - CRMScript.NetServer.AssociateType
   - CRMScript.NetServer.baseStatus
   - CRMScript.NetServer.BatchTaskState
   - CRMScript.NetServer.BookingType
@@ -105,7 +105,6 @@ items:
   - CRMScript.NetServer.NSArea
   - CRMScript.NetServer.NSAssociate
   - CRMScript.NetServer.NSAssociateAgent
-  - CRMScript.NetServer.NSAssociateList
   - CRMScript.NetServer.NSAttachmentEntity
   - CRMScript.NetServer.NSAudienceAgent
   - CRMScript.NetServer.NSAudienceConfigParameter
@@ -891,24 +890,18 @@ references:
   name: NSAssociate
   nameWithType: NSAssociate
   fullName: CRMScript.NetServer.NSAssociate
-- uid: CRMScript.NetServer.associateType
-  commentId: T:CRMScript.NetServer.associateType
+- uid: CRMScript.NetServer.AssociateType
+  commentId: T:CRMScript.NetServer.AssociateType
   isExternal: true
-  name: associateType
-  nameWithType: associateType
-  fullName: CRMScript.NetServer.associateType
+  name: AssociateType
+  nameWithType: AssociateType
+  fullName: CRMScript.NetServer.AssociateType
 - uid: CRMScript.NetServer.NSAssociateAgent
   commentId: T:CRMScript.NetServer.NSAssociateAgent
   isExternal: true
   name: NSAssociateAgent
   nameWithType: NSAssociateAgent
   fullName: CRMScript.NetServer.NSAssociateAgent
-- uid: CRMScript.NetServer.NSAssociateList
-  commentId: T:CRMScript.NetServer.NSAssociateList
-  isExternal: true
-  name: NSAssociateList
-  nameWithType: NSAssociateList
-  fullName: CRMScript.NetServer.NSAssociateList
 - uid: CRMScript.NetServer.NSAttachmentEntity
   commentId: T:CRMScript.NetServer.NSAttachmentEntity
   isExternal: true
