--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -194,8 +194,6 @@ items:
     href: CRMScript.NetServer.NSAssociate.yml
   - name: NSAssociateAgent
     href: CRMScript.NetServer.NSAssociateAgent.yml
-  - name: NSAssociateList
-    href: CRMScript.NetServer.NSAssociateList.yml
   - name: NSAttachmentEntity
     href: CRMScript.NetServer.NSAttachmentEntity.yml
   - name: NSAudienceAgent
@@ -1170,8 +1168,8 @@ items:
       href: CRMScript.NetServer.archivedState.yml
     - name: AssignmentStatus
       href: CRMScript.NetServer.AssignmentStatus.yml
-    - name: Enum associateType
-      href: CRMScript.NetServer.associateType.yml
+    - name: AssociateType
+      href: CRMScript.NetServer.AssociateType.yml
     - name: Enum baseStatus
       href: CRMScript.NetServer.baseStatus.yml
     - name: Enum BatchTaskState
